--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="D:/AndroidAndJava/jar/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="D:/AndroidAndJava/jar/json-lib-2.4-jdk15.jar"/>
+	<classpathentry kind="lib" path="D:/AndroidAndJava/jar/dysmsapi_demo_sdk__java/java/api_demo/alicom-dysms-api/libs/aliyun-java-sdk-core-3.2.3.jar"/>
+	<classpathentry kind="lib" path="D:/AndroidAndJava/jar/dysmsapi_demo_sdk__java/java/api_demo/alicom-dysms-api/libs/aliyun-java-sdk-dysmsapi-1.0.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
